# test_task

./: CMakeLists.txt  README.md  test_task
src/: Menu.cpp  Menu.h  ObjectsManager.cpp  ObjectsManager.h  SimpleObj.cpp  SimpleObj.h  main.cpp
tests/unitTests/: CMakeLists.txt
tests/unitTests/src/: main.cpp  tests.cpp
